WIP: client-side credit service

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -224,6 +224,8 @@
     <script src="modules/idea/services.js"></script>
     <script src="modules/idea/directives/ideaCard/directives.js"></script>
     <script src="modules/idea/directives/ideaInfo/directives.js"></script>
+
+    <script src="modules/badge/services.js"></script>
     <!-- endbuild -->
 
     <script type="text/javascript">
