add like button that works properly on project home page, project-card, project-card on first page, challenge home page. add like button that don't works on idea home page, challenge-card, challenge-more-card. add new visual for follow button

--- a/client/app/modules/challenge/directives/challengeBlock/challenge-more-card.tpl.html
+++ b/client/app/modules/challenge/directives/challengeBlock/challenge-more-card.tpl.html
@@ -1,11 +1,11 @@
 <a ui-sref="challenge({ cid : challenge.accessUrl })">
     <img ng-src="{{challenge.poster || '/images/placeholder100x100.png'}}" alt="Challenge poster" class="md-card-image" width="100%">
 </a>
-<md-button class="md-fab md-mini like" onclick="likeButton()">
-    &#x25B2;
+<md-button class="md-fab md-mini follow md-raised" ng-click="follow()" ng-class="{ 'md-accent' : isFollow }" ng-if="currentUser && !isOwner">
+    <i class="fa fa-eye"></i>
 </md-button>
-<md-button class="md-fab md-mini dislike" onclick="disLikeButton()">
-    &#x25BC;
+<md-button class="md-fab md-mini like md-raised" ng-click="like()" ng-class="{ 'md-accent' : isLike }" ng-if="currentUser && !isOwner">
+    <i class="fa fa-thumbs-up"></i>
 </md-button>
 <md-content layout-padding style="cursor:hand;">
     <div>
