--- a/client/app/index.html
+++ b/client/app/index.html
@@ -70,11 +70,9 @@
                     </a>
                     &nbsp;
                 </div>
+
                 <search-bar flex></search-bar>
-                <a ng-cloak ui-sref="feed" ng-if="currentUser" style="color: #036;" class="top-bar-icon">
-                    <i class="fa fa-flag fa-2x"></i>
-                    <div class="tooltip-topbar-icon">notifications</div>
-                </a>
+
                 <md-button ng-cloak ui-sref="signin" class="md-raised md-primary" ng-if="!currentUser">
                     <i class="fa fa-sign-in"> Sign In</i>
                 </md-button>
@@ -85,15 +83,15 @@
                     </div>
                 </md-button>
 
-                <a ng-cloak ui-sref="contactPage" style="color: #036;margin-left:0px;" class="top-bar-icon">
-                    <i class="fa fa-question fa-2x"></i>
-                    <div class="tooltip-topbar-icon">contact</div>
-                </a>
-
                 <a ng-cloak ui-sref="feed" ng-if="currentUser" style="color: #036;" class="top-bar-icon">
                     <i class="fa fa-flag fa-2x"></i>
                     <span ng-if="unseenNotificationCounter > 0" class="badge">{{ unseenNotificationCounter > 99 ? "99+" : unseenNotificationCounter}}</span>
                     <div class="tooltip-topbar-icon">notifications</div>
+                </a>
+
+                <a ng-cloak ui-sref="contactPage" style="color: #036" class="top-bar-icon">
+                    <i class="fa fa-question fa-2x"></i>
+                    <div class="tooltip-topbar-icon">contact</div>
                 </a>
 
                 <md-button ng-cloak ng-if="currentUser" id="signout" class="md-raised md-warn" ng-click="signout()" >
