--- a/client/app/modules/challenge/directives/challengeBlock/challenge-card.tpl.html
+++ b/client/app/modules/challenge/directives/challengeBlock/challenge-card.tpl.html
@@ -1,10 +1,10 @@
 <a ui-sref="challenge({ pid : challenge.accessUrl })">
     <img ng-src="{{challenge.poster || '/images/placeholder100x100.png'}}" alt="Challenge poster" class="md-card-image" width="100%">
 </a>
-<md-button class="md-fab md-mini follow md-raised" ng-click="follow()" ng-class="{ 'md-accent' : isFollow }" ng-if="currentUser && !isOwner">
+<md-button class="md-fab md-mini follow md-raised" ng-click="follow()" ng-class="{ 'md-accent' : isFollow }" ng-if="currentUser">
     <i class="fa fa-eye"></i>
 </md-button>
-<md-button class="md-fab md-mini like md-raised" ng-click="like()" ng-class="{ 'md-accent' : isLike }" ng-if="currentUser && !isOwner">
+<md-button class="md-fab md-mini like md-raised" ng-click="like()" ng-class="{ 'md-accent' : isLike }" ng-if="currentUser">
     <i class="fa fa-thumbs-up"></i>
 </md-button>
 <md-content layout-padding style="cursor:hand;">
