Show owners, follower, members of projects, ideas, challenges

--- a/client/app/modules/challenge/directives/challengeBlock/challenge-more-card.tpl.html
+++ b/client/app/modules/challenge/directives/challengeBlock/challenge-more-card.tpl.html
@@ -9,7 +9,7 @@
 </md-button>
 <md-content layout-padding style="cursor:hand;">
     <a style="text-decoration: none; color: black;" ui-sref="challenge({ cid : challenge.accessUrl })">
-        <h4 class="md-title" style="margin: 5px 0 0 0">{{ challenge.title }}</h4>
+        <h4 class="md-title" style="margin: 0px">{{ challenge.title }}</h4>
     </a>
     <div class="text-muted" layout="row" style="margin:2px;" layout-align="space-around center">
         <span style="margin:2px;font-size:0.7em;">Created by</span>
