Added spacer directive

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -157,6 +157,7 @@
     <script src="modules/common/scroller/scroller.js"></script>
     <script src="modules/common/pdf/pdf.js"></script>
     <script src="modules/common/recommendation/recommendation.js"></script>
+    <script src="modules/common/spacer/spacer.js"></script>
 
     <script src="modules/common/lang.js"></script>
 
