--- a/client/app/modules/idea/directives/ideaCard/idea-card.tpl.html
+++ b/client/app/modules/idea/directives/ideaCard/idea-card.tpl.html
@@ -1,15 +1,12 @@
 <div class="idea-card">
     <a ui-sref="idea({ iid : idea._id })">
-        <h4>{{ idea.title }}</h4>
+        <img class="idea-card-icon" src="images/svg/ideas.svg">
     </a>
-        <i class="fa fa-eye"></i>
-    </md-button>
-    <md-button class="md-fab md-mini like md-raised" ng-click="like()" ng-class="{ 'md-accent' : isLike }" ng-if="currentUser">
-        <i class="fa fa-thumbs-up"></i>
-    </md-button>
+    <a ui-sref="idea({ iid : idea._id })" style="text-decoration:none;color:black;">
+        <h4 class="idea-card-title-cut" style="margin: 0;font-size:1.3em;">{{ idea.title }}</h4>
+    </a>
     <div class="text-muted" layout="row">
-    <md-button class="md-fab md-mini follow md-raised" ng-click="follow()" ng-class="{ 'md-accent' : isFollow }" ng-if="currentUser">
-        <div>
+        <div style="margin: 12px 8px;padding: 0 6px;">
             By:
         </div>
         <md-button ui-sref="profile({ uid : idea.owner._id})">
