added space to bottom

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -109,7 +109,7 @@
             <ng-include src="sideNavTemplateUrl" flex layout="column" layout-fill>
             </ng-include>
         </md-sidenav>
-        <section ui-view="mainView" layout="column" layout-fill class="right-part"></section>
+        <section ui-view="mainView" layout="column" layout-fill id="main-view"></section>
     </section>
 
     <script src="vendors/tinymce-dist/tinymce.min.js"></script>
