Easier to add projects and challenges

--- a/client/app/modules/common/search/searchBar.tpl.html
+++ b/client/app/modules/common/search/searchBar.tpl.html
@@ -1,5 +1,5 @@
 <div>
-    <md-autocomplete md-items="result in lookUp(searchText)" md-search-text="searchText" md-search-text-change="" md-selected-item="selectedItem" md-selected-item-change="onSelection(selectedItem)" placeholder="Search...">
+    <md-autocomplete md-items="result in lookUp(searchText)" md-search-text="searchText" md-search-text-change="" md-selected-item="selectedItem" md-selected-item-change="selectedItemChange()" placeholder="Search...">
         <md-item-template>
             <div layout="row" layout-align="start center">
                 <!-- Depending on the type of result, show the right icon -->
