New image crop working for user profile

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="vendors/angular-image-crop/image-crop-styles.css"/>
     <link rel="stylesheet" href="vendors/angular-carousel/dist/angular-carousel.css">
     <link rel="stylesheet" href="vendors/angular-material/angular-material.css"/>
+    <link rel="stylesheet" href="vendors/ng-img-crop/compile/unminified/ng-img-crop.css">
     <link rel="stylesheet" href="styles/main.css">
 
     <script type="text/javascript">var switchTo5x=true;</script>
@@ -146,6 +147,7 @@
     <script src="vendors/angulartics/src/angulartics.js"></script>
     <script src="vendors/angulartics-google-analytics/lib/angulartics-google-analytics.js"></script>
     <script src="vendors/angular-cookies/angular-cookies.js"></script>
+    <script src="vendors/ng-img-crop/compile/unminified/ng-img-crop.js"></script>
 
     <script src="env/config.js"></script>
 
@@ -159,6 +161,7 @@
     <script src="modules/common/pdf/pdf.js"></script>
     <script src="modules/common/recommendation/recommendation.js"></script>
     <script src="modules/common/search/search.js"></script>
+    <script src="modules/common/image-chooser/image-chooser.js"></script>
 
     <script src="modules/common/lang.js"></script>
 
